syntax = "proto3";

package littlehorse;

import "google/protobuf/timestamp.proto";
import "variable.proto";
import "object_id.proto";
import "common_enums.proto";

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.sdk.common.proto";
option csharp_namespace = "LittleHorse.Common.Proto";

// A WorkflowEvent represents a "Thing That Happened" *INSIDE* a WfRun. It is DIFFERENT from
// an ExternalEvent, because an ExternalEvent represents something that happened OUTSIDE the WfRun,
// and is used to send information to the WfRun.
//
// In contrast, a WorkflowEvent is thrown by the WfRun and is used to send information to the outside
// world.
message WorkflowEvent {
  // The ID of the WorkflowEvent. Contains WfRunId and WorkflowEventDefId.
  WorkflowEventId id = 1;

  // The content of the WorkflowEvent.
  VariableValue content = 2;

  // The time that the WorkflowEvent was created.
  google.protobuf.Timestamp created_at = 3;
}

message WorkflowEventDef {
  WorkflowEventDefId id = 1;
  google.protobuf.Timestamp created_at = 2;
  VariableType type = 3;
}
